test/libsolidity/syntaxTests/parsing/external_variable.sol
contract c {
	uint external x;
}
// ----
// ParserError: (19-19): Expected token Identifier got 'External'
